docs: update /GET /articles route
