# docs/swagger.json
@@ -28,6 +28,28 @@
                     "Articles"
                 ],
                 "summary": "Get articles",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "example": "\"desc\"",
+                        "description": "Sort by date",
+                        "name": "date",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "example": "\"desc\"",
+                        "description": "Sort by likes",
+                        "name": "likes",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Sort by views",
+                        "name": "views",
+                        "in": "query"
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "Response",
@@ -684,8 +706,14 @@
                 "createdAt": {
                     "type": "string"
                 },
+                "createdAtTimestamp": {
+                    "type": "integer"
+                },
                 "deletedAt": {
                     "type": "string"
+                },
+                "deletedAtTimestamp": {
+                    "type": "integer"
                 },
                 "id": {},
                 "likes": {
@@ -705,6 +733,9 @@
                 },
                 "updatedAt": {
                     "type": "string"
+                },
+                "updatedAtTimestamp": {
+                    "type": "integer"
                 },
                 "views": {
                     "type": "integer"
@@ -755,8 +786,11 @@
                 "message": {
                     "type": "string"
                 },
+                "token": {
+                    "type": "string"
+                },
                 "user": {
-                    "$ref": "#/definitions/model.User"
+                    "$ref": "#/definitions/model.UserResponseObject"
                 }
             }
         },
@@ -783,28 +817,10 @@
                 }
             }
         },
-        "model.User": {
+        "model.UserResponseObject": {
             "type": "object",
             "properties": {
-                "articleCount": {
-                    "type": "integer"
-                },
-                "articleLikesCount": {
-                    "type": "integer"
-                },
-                "createdAt": {
-                    "type": "string"
-                },
-                "firstName": {
-                    "type": "string"
-                },
                 "id": {
-                    "type": "string"
-                },
-                "lastName": {
-                    "type": "string"
-                },
-                "password": {
                     "type": "string"
                 },
                 "role": {
